[package]
name = "proxmox-backup-debug"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
walkdir = "2"
serde_json = "1.0"

proxmox = { version = "0.13.3", features = [ "api-macro", "cli" ] }

pbs-config = { path = "../pbs-config" }
pbs-client = { path = "../pbs-client" }
pbs-datastore = { path = "../pbs-datastore" }
pbs-runtime = { path = "../pbs-runtime" }
pbs-tools = { path = "../pbs-tools" }
