[package]
name = "proxmox-file-restore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.13"
futures = "0.3"
libc = "0.2"
nix = "0.24"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = [ "io-std", "rt", "rt-multi-thread", "time" ] }
tokio-util = { version = "0.7", features = ["io"] }

pxar = { version = "0.10.2", features = [ "tokio-io" ] }

#proxmox = { version = "0.15.3" }
proxmox-async = "0.4"
proxmox-lang = "1.1"
proxmox-router = { version = "1.3.0", features = [ "cli" ] }
proxmox-schema = { version = "1.3.1", features = [ "api-macro" ] }
proxmox-time = "1"
proxmox-uuid = "1"
proxmox-sys = { version = "0.4.1", features = [ "logrotate" ] }
proxmox-compression = "0.1"

pbs-api-types = { path = "../pbs-api-types" }
pbs-buildcfg = { path = "../pbs-buildcfg" }
pbs-config = { path = "../pbs-config" }
pbs-client = { path = "../pbs-client" }
pbs-datastore = { path = "../pbs-datastore" }
pbs-tools = { path = "../pbs-tools" }
