[package]
name = "proxmox-file-restore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.13"
futures = "0.3"
libc = "0.2"
nix = "0.24"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = [ "io-std", "rt", "rt-multi-thread", "time" ] }
tokio-util = { version = "0.7", features = ["io"] }

pxar.workspace = true

#proxmox = { version = "0.15.3" }
proxmox-async.workspace = true
proxmox-lang.workspace=true
proxmox-router = { workspace = true, features = [ "cli" ] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true
proxmox-sys = { workspace = true, features = [ "logrotate" ] }
proxmox-compression.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true
pbs-config.workspace = true
pbs-client.workspace = true
pbs-datastore.workspace = true
pbs-tools.workspace = true
