[package]
name = "proxmox-file-restore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [ "io-std", "rt", "rt-multi-thread", "time" ] }
tokio-util.workspace = true

pxar.workspace = true

proxmox-async.workspace = true
proxmox-compression.workspace = true
proxmox-lang.workspace=true
proxmox-router = { workspace = true, features = [ "cli" ] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-sys = { workspace = true, features = [ "logrotate" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true
pbs-client.workspace = true
pbs-config.workspace = true
pbs-datastore.workspace = true
pbs-key-config.workspace = true
pbs-tools.workspace = true
