[package]
name = "proxmox-protocol"
version = "0.1.0"
authors = [
    "Dietmar Maurer <dietmar@proxmox.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
edition = "2018"

[lib]
crate-type = ['lib', 'cdylib']

[dependencies]
chrono = "0.4"
endian_trait = "0.6"
errno = "0.2"
failure = "0.1"
libc = "0.2"
openssl = "0.10"
serde_json = "1.0"
url = "1.7"
