[package]
name = "proxmox-rest-server"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2018"
description = "REST server implementation"

# for example
[dev-dependencies]
proxmox-schema = { version = "1.3.1", features = [ "api-macro" ] }
tokio = { version = "1.6", features = [ "rt-multi-thread", "signal", "process" ] }

[dependencies]
anyhow = "1.0"
futures = "0.3"
handlebars = "3.0"
http = "0.2"
hyper = { version = "0.14.5", features = [ "full" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
once_cell = "1.3.1"
percent-encoding = "2.1"
regex = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["signal", "process"] }
tokio-openssl = "0.6.1"
tokio-stream = "0.1.0"
tower-service = "0.3.0"
url = "2.1"

#proxmox = "0.15.3"
proxmox-async = "0.4"
proxmox-compression = "0.1.1"
proxmox-io = "1"
proxmox-lang = "1.1"
proxmox-http = { version = "0.6.4", features = [ "client" ] }
proxmox-router = "1.2.4"
proxmox-schema = { version = "1.3.1", features = [ "api-macro", "upid-api-impl" ] }
proxmox-time = "1"
proxmox-sys = { version = "0.4", features = [ "logrotate", "timer" ] }
