[package]
name = "proxmox-restore-daemon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Proxmox Restore Daemon"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
env_logger = "0.9"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["parking_lot", "sync"] }
tokio-stream = "0.1.0"
tokio-util = { version = "0.7", features = [ "codec", "io" ] }

pathpatterns = "0.1.2"
pxar = { version = "0.10.2", features = [ "tokio-io" ] }

proxmox-async = "0.4"
proxmox-compression = "0.1.1"
proxmox-rest-server = "0.2"
proxmox-router = { version = "1.3.0", features = [ "cli", "server" ] }
proxmox-schema = { version = "1.3.1", features = [ "api-macro" ] }
proxmox-time = "1"
proxmox-sys = { version = "0.4.1",  features = [ "sortable-macro" ] }

pbs-api-types = { path = "../pbs-api-types" }
pbs-tools = { path = "../pbs-tools" }
pbs-datastore = { path = "../pbs-datastore" }
pbs-client = { path = "../pbs-client" }
