[package]
name = "proxmox-restore-daemon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Proxmox Restore Daemon"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
env_logger = "0.9"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["macros", "parking_lot", "sync"] }
tokio-stream = "0.1.0"
tokio-util = { version = "0.7", features = [ "codec", "io" ] }

pathpatterns.workspace = true
pxar.workspace = true

proxmox-async.workspace = true
proxmox-compression.workspace = true
proxmox-rest-server.workspace = true
proxmox-router = { workspace = true, features = [ "cli", "server" ] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-time.workspace = true
proxmox-sys = { workspace = true,  features = [ "sortable-macro" ] }

pbs-api-types.workspace = true
pbs-tools.workspace = true
pbs-datastore.workspace = true
pbs-client.workspace = true
