[package]
name = "proxmox-rrd-api-types"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2018"
description = "API type definitions for proxmox-rrd crate."


[dependencies]
serde = { version = "1.0", features = [] }
proxmox = { version = "0.13.5", features = ["api-macro"] }
