[package]
name = "proxmox-rrd"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2018"
description = "Simple RRD database implementation."

[dev-dependencies]
proxmox-router = "1.2.4"

[dependencies]
anyhow = "1.0"
bitflags = "1.2.1"
crossbeam-channel = "0.5"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"

#proxmox = { version = "0.15.3" }
proxmox-time = "1"
proxmox-schema = { version = "1.3.1", features = [ "api-macro" ] }
proxmox-sys = "0.3.1"