[package]
name = "proxmox-rrd"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Simple RRD database implementation."

[dev-dependencies]
proxmox-router = { workspace = true, features = ["cli", "server"] }

[dependencies]
anyhow = "1.0"
bitflags = "1.2.1"
crossbeam-channel = "0.5"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"

#proxmox = { version = "0.15.3" }
proxmox-time.workspace = true
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-sys.workspace = true
