[package]
name = "pxar-bin"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[[bin]]
name = "pxar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
nix = "0.24"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.6", features = [ "rt", "rt-multi-thread" ] }

pathpatterns = "0.1.2"
pxar = { version = "0.10.2", features = [ "tokio-io" ] }

proxmox-async = "0.4"
proxmox-router = "1.3.0"
proxmox-schema = { version = "1.3.1", features = [ "api-macro" ] }
proxmox-sys = "0.4.1"

pbs-client = { path = "../pbs-client" }
pbs-pxar-fuse = { path = "../pbs-pxar-fuse" }
pbs-tools = { path = "../pbs-tools" }
