[package]
name = "pxar-bin"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[[bin]]
name = "pxar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
nix = "0.24"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.6", features = [ "rt", "rt-multi-thread" ] }

pathpatterns.workspace = true
pxar.workspace = true

proxmox-async.workspace = true
proxmox-router = { workspace = true, features = ["cli", "server"] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-sys.workspace = true

pbs-client.workspace = true
pbs-pxar-fuse.workspace = true
pbs-tools.workspace = true
